<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rittmann.common.customs.Converter" />

        <import type="com.rittmann.common.datasource.basic.CryptoOperationType" />

        <variable
            name="viewModel"
            type="com.rittmann.crypto.keep.ui.RegisterCryptoMovementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/custom_default_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="@dimen/padding_standard"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_standard"
                tools:context=".keep.ui.RegisterCryptoMovementActivity">

                <TextView
                    android:text="@string/stub_date"
                    android:id="@+id/txt_crypto_date"
                    style="@style/Robbie.Subtitle2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:drawablePadding="@dimen/padding_standard"
                    app:drawableStartCompat="@drawable/outline_date_range_black_18" />

                <com.rittmann.common.customs.CustomEditText
                    android:id="@+id/edit_crypto_name"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="Name"
                    app:layout_constraintTop_toBottomOf="@id/txt_crypto_date"
                    app:textFromEdit="@={viewModel.tradeMovement.name}" />

                <RadioGroup
                    android:id="@+id/radio_group_crypto_operation_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_name">

                    <RadioButton
                        android:id="@+id/radio_crypto_operation_type_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.tradeMovement.type.value == CryptoOperationType.BUY.value}"
                        android:onClick="@{() -> viewModel.onCryptoOperationTypeChanged(CryptoOperationType.BUY)}"
                        android:text="@string/crypto_movement_type_buy" />

                    <RadioButton
                        android:id="@+id/radio_crypto_operation_type_sell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.tradeMovement.type.value == CryptoOperationType.SELL.value}"
                        android:onClick="@{() -> viewModel.onCryptoOperationTypeChanged(CryptoOperationType.SELL)}"
                        android:text="@string/crypto_movement_type_sell" />
                </RadioGroup>

                <com.rittmann.common.customs.CustomEditTextCurrency
                    android:id="@+id/edit_crypto_bought_amount"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:formatType="decimal"
                    app:labelText="@string/crypto_movement_operated_movement"
                    app:layout_constraintTop_toBottomOf="@id/radio_group_crypto_operation_type"
                    app:textFromEdit="@={viewModel.tradeMovement.operatedAmount}" />

                <com.rittmann.common.customs.CustomEditTextCurrency
                    android:id="@+id/edit_crypto_current_value"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:currencyType="@={viewModel.tradeMovement.currentValueCurrency}"
                    app:enableChangeCurrencyType="false"
                    app:labelText="@string/crypto_movement_current_value"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_bought_amount"
                    app:textFromEdit="@={viewModel.tradeMovement.currentValue}" />

                <CheckBox
                    android:id="@+id/checkbox_update_total_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/crypto_movement_update_the_total_according_by_current_and_amount"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_current_value" />

                <com.rittmann.common.customs.CustomEditTextCurrency
                    android:id="@+id/edit_crypto_total_value"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:currencyType="@={viewModel.tradeMovement.totalValueCurrency}"
                    app:labelText="@string/trade_movement_total_value"
                    app:layout_constraintTop_toBottomOf="@id/checkbox_update_total_value"
                    app:textFromEdit="@={viewModel.tradeMovement.totalValue}" />

                <CheckBox
                    android:id="@+id/checkbox_update_total_value_calculate_after_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/crypto_movement_update_the_total_calculated_according_by_total"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_total_value" />

                <com.rittmann.common.customs.CustomEditTextCurrency
                    android:id="@+id/edit_crypto_concrete_total_value"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:currencyType="@={viewModel.tradeMovement.totalValueCurrency}"
                    app:labelText="@string/trade_movement_concrete_total_value"
                    app:layout_constraintTop_toBottomOf="@id/checkbox_update_total_value_calculate_after_transaction"
                    app:textFromEdit="@={viewModel.tradeMovement.concreteTotalValue}" />

                <com.rittmann.common.customs.CustomEditTextCurrency
                    android:id="@+id/edit_crypto_tax"
                    style="@style/Robbie.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:currencyType="@={viewModel.tradeMovement.taxCurrency}"
                    app:labelText="Tax"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_concrete_total_value"
                    app:textFromEdit="@={viewModel.tradeMovement.tax}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view_crypto_name_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintHeight_max="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_crypto_name"
                    tools:itemCount="2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/ButtonPrimary"
            android:onClick="@{() -> viewModel.saveCrypto()}"
            android:text="@string/trade_movement_btn_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>